Frontend Prisma integrations

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,2 +1,7 @@
-FROM mysql
+FROM postgres:15
 
+ENV POSTGRES_USER=dbuser
+ENV POSTGRES_PASSWORD=dbpassword
+ENV POSTGRES_DB=darkweb
+
+CMD ["postgres"]
