--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,27 @@ services:
     volumes:
       - ./public/nginx.conf:/etc/nginx/nginx.conf:ro
 
+  postgres:
+    restart: always
+    container_name: postgres_db
+    build:
+      context: ./database
+      dockerfile: Dockerfile
+    environment:
+      POSTGRES_USER: dbuser
+      POSTGRES_PASSWORD: dbpassword
+      POSTGRES_DB: darkweb
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - my_network
+
 networks:
   my_network:
     driver: bridge
+
+volumes:
+  postgres_data:
+    driver: local
