--- a/public/nginx.conf
+++ b/public/nginx.conf
@@ -9,11 +9,27 @@ http {
   server {
     listen *:80;
     server_name dashboard.localhost;
-    access_log  off;
+    access_log off;
     error_log off;
 
     location / {
-      proxy_pass http://localhost:3000;
+      proxy_pass http://localhost:3001;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
+  }
+
+  server {
+    listen *:80;
+    server_name portal.localhost;
+    access_log off;
+    error_log off;
+
+    location / {
+      proxy_pass http://localhost:5173;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
