--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ contourpy==1.3.1
 cycler==0.12.1
 dnspython==2.6.1
 email_validator==2.2.0
+et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 fastapi==0.115.6
 fastapi-cli==0.0.5
@@ -27,6 +28,7 @@ MarkupSafe==2.1.5
 matplotlib==3.9.2
 mdurl==0.1.2
 numpy==2.1.3
+openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
 pillow==11.0.0
